--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ path                = "src/_lib.rs"
 [dependencies]
 abistr.version      = "0.1"
 abistr.features     = ["bytemuck"]
+bitflags            = "1"
 bytemuck.version    = "1"
 bytemuck.features   = ["derive"]
