FromMemory: ReadWriteAt support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ abistr.features     = ["bytemuck"]
 bitflags            = "1"
 bytemuck.version    = "1"
 bytemuck.features   = ["derive"]
+read_write_at       = "0.1"
