--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     "tasks": [
         {
             "label":            "build",
-            "command":          "cargo test --all-targets",
+            "command":          "cargo test",
             "group":            { "kind": "build", "isDefault": true },
         },
         {
